[project]
name = "virtual_column"
version = "0.0.1"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license-files = ["LICEN[CS]E*"]

dependencies = [
  "pandas>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "ruff>=0.15",
    "mypy>=1.19",
]
